2018-06-08  Kocsen Chung  <kocsen_chung@apple.com>

        Cherry-pick r232585. rdar://problem/39117121

    Remove unused debug mode conditions
    https://bugs.webkit.org/show_bug.cgi?id=186358
    <rdar://problem/39117121>
    
    Reviewed by Zalan Bujtas.
    
    Source/WebKit:
    
    Remove some unused code paths related to ResourceLoadStatistics debug mode.
    
    * UIProcess/WebResourceLoadStatisticsStore.cpp:
    (WebKit::WebResourceLoadStatisticsStore::logUserInteraction):
    (WebKit::WebResourceLoadStatisticsStore::shouldPartitionCookies const):
    
    LayoutTests:
    
    Rebase test expectations after behavior change.
    
    * http/tests/resourceLoadStatistics/non-prevalent-resources-can-access-cookies-in-a-third-party-context-expected.txt:
    * http/tests/resourceLoadStatistics/non-prevalent-resources-can-access-cookies-in-a-third-party-context.html:
    * http/tests/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-partitioning-timeout-expected.txt:
    * http/tests/resourceLoadStatistics/partitioned-and-unpartitioned-cookie-with-partitioning-timeout.html:
    * http/tests/resourceLoadStatistics/partitioned-cookies-with-and-without-user-interaction-expected.txt:
    * http/tests/resourceLoadStatistics/partitioned-cookies-with-and-without-user-interaction.html:
    * http/tests/resourceLoadStatistics/third-party-cookie-with-and-without-user-interaction-expected.txt:
    * http/tests/resourceLoadStatistics/third-party-cookie-with-and-without-user-interaction.html:
    * http/tests/storageAccess/has-storage-access-from-prevalent-domain-with-recent-user-interaction-expected.txt
    * http/tests/storageAccess/has-storage-access-from-prevalent-domain-with-recent-user-interaction.html
    
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232585 268f45cc-cd09-0410-ab3c-d52691b4dbfc

    2018-06-07  Brent Fulgham  <bfulgham@apple.com>

            Remove unused debug mode conditions